refactor: optimize EndpointMetadata using Stream.toList() for better performance